--- a/details.html
+++ b/details.html
@@ -8,11 +8,14 @@
     body {
       background-color: rgba(0,0,0,0.05);
       text-align: center;
+      padding: 0;
+      margin: 0;
     }
     
     .wrapper {
-      max-width: 450px;
+      max-width: 430px;
       display: inline-block;
+      padding: 30px;
     }
 
     svg{
