--- a/details.html
+++ b/details.html
@@ -647,6 +647,7 @@
     window.location.reload();
   }
   document.body.addEventListener('click', reload, false);
+  document.body.addEventListener("touchstart", reload, false);
   get();
 
 </script>
