--- a/details.html
+++ b/details.html
@@ -819,13 +819,198 @@
         />
       </g>
     </svg>
+    <svg class="svg12" viewBox="0 0 140 42" xmlns="http://www.w3.org/2000/svg">
+      <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+        <g>
+          <g class="bubble bounce" fill="#C1C6CE" fill-rule="nonzero">
+            <path d="M22.5242094,0.496262155 L21.6304189,0.321342187 C16.9228278,-0.577267676 12.0498065,0.426421183 8.08572632,3.11112212 C4.12164615,5.79582306 1.39201941,9.9410806 0.498656042,14.6329759 L0.323090036,15.5234776 C-0.579202005,20.2114453 0.426038094,25.0644917 3.11737011,29.0135589 C5.80870212,32.9626262 9.96533491,35.6837413 14.6716208,36.577481 C15.2583016,36.6913913 15.7589799,37.0695383 16.0275355,37.6015619 C16.2960911,38.1335855 16.3022549,38.7595205 16.0442278,39.2966914 L15.262161,40.8868729 C15.1475588,41.1275761 15.1643322,41.4099313 15.3066325,41.6354852 C15.4489329,41.8610391 15.6970335,41.9985237 15.9644251,42 C20.0662854,42 33.5210256,35.5120594 36.3300817,24.3171814 C36.3460422,24.3330832 41.5811013,4.28089419 22.5242094,0.496262155 Z"></path>
+          </g>
+          <g fill="#38414C">
+            <rect x="6.6" y="12" width="3.72" height="0" rx="2" ry="2">
+              <animate id="a1" attributeName="height" from="0" to="6" dur="0.15s" fill="freeze" begin="1s" />
+              <animate attributeName="y" from="19" to="16" dur="0.15s" fill="freeze" begin="1s" />
+
+              <animate id="a6" attributeName="x" from="6.6" to="1.6" dur="0.15s" fill="freeze" begin="a5.end" />
+              <animate attributeName="opacity" from="1" to="0" dur="0.15s" fill="freeze" begin="a5.end" />
+
+            </rect>
+          </g>
+          <g fill="#38414C">
+            <rect x="11.6" y="12" width="3.72" height="0" rx="2" ry="2">
+              <animate id="a2" attributeName="height" from="0" to="14" dur="0.15s" fill="freeze" begin="a1.end" />
+              <animate attributeName="y" from="19" to="12" dur="0.15s" fill="freeze" begin="a1.end" />
+
+              <animate id="a7" attributeName="x" from="11.6" to="6.6" dur="0.15s" fill="freeze" begin="a6.end" />
+
+              <animate id="a13" attributeName="x" from="6.6" to="1.6" dur="0.15s" fill="freeze" begin="a12.end" />
+              <animate attributeName="opacity" from="1" to="0" dur="0.15s" fill="freeze" begin="a12.end" />
+
+            </rect>
+          </g>
+          <g fill="#38414C">
+            <rect x="16.6" y="12" width="3.72" height="0" rx="2" ry="2">
+              <animate id="a3" attributeName="height" from="0" to="10" dur="0.15s" fill="freeze" begin="a2.end" />
+              <animate attributeName="y" from="17" to="14" dur="0.15s" fill="freeze" begin="a2.end" />
+
+              <animate id="a8" attributeName="x" from="16.6" to="11.6" dur="0.15s" fill="freeze" begin="a7.end" />
+
+              <animate id="a14" attributeName="x" from="11.6" to="6.6" dur="0.15s" fill="freeze" begin="a13.end" />
+
+            </rect>
+          </g>
+          <g fill="#38414C">
+            <rect x="21.6" y="12" width="3.72" height="0" rx="2" ry="2">
+              <animate id="a4" attributeName="height" from="0" to="14" dur="0.15s" fill="freeze" begin="a3.end" />
+              <animate attributeName="y" from="19" to="12" dur="0.15s" fill="freeze" begin="a3.end" />
+
+              <animate id="a9" attributeName="x" from="21.6" to="16.6" dur="0.15s" fill="freeze" begin="a8.end" />
+
+              <animate id="a15" attributeName="x" from="16.6" to="11.6" dur="0.15s" fill="freeze" begin="a14.end" />
+
+            </rect>
+          </g>
+          <g fill="#38414C">
+            <rect x="26.6" y="12" width="3.72" height="0" rx="2" ry="2">
+              <animate id="a5" attributeName="height" from="0" to="6" dur="0.15s" fill="freeze" begin="a4.end" />
+              <animate attributeName="y" from="19" to="16" dur="0.15s" fill="freeze" begin="a4.end" />
+
+              <animate id="a10" attributeName="x" from="26.6" to="21.6" dur="0.15s" fill="freeze" begin="a9.end" />
+
+              <animate id="a16" attributeName="x" from="21.6" to="16.6" dur="0.15s" fill="freeze" begin="a15.end" />
+
+            </rect>
+          </g>
+
+          <g fill="#38414C">
+            <rect x="31.6" y="12" width="3.72" height="0" rx="2" ry="2">
+              <animate id="a11" attributeName="height" from="0" to="14" dur="0.15s" fill="freeze" begin="a10.end" />
+              <animate attributeName="y" from="19" to="12" dur="0.15s" fill="freeze" begin="a10.end" />
+
+              <animate id="a12" attributeName="x" from="31.6" to="26.6" dur="0.15s" fill="freeze" begin="a10.end" />
+
+              <animate id="a17" attributeName="x" from="26.6" to="21.6" dur="0.15s" fill="freeze" begin="a16.end" />
+            </rect>
+          </g>
+
+          <g fill="#38414C">
+            <rect x="31.6" y="12" width="3.72" height="0" rx="2" ry="2">
+              <animate id="a18" attributeName="height" from="0" to="10" dur="0.15s" fill="freeze" begin="a17.end" />
+              <animate attributeName="y" from="17" to="14" dur="0.15s" fill="freeze" begin="a17.end" />
+
+              <animate id="a19" attributeName="x" from="31.6" to="26.6" dur="0.15s" fill="freeze" begin="a18.end" />
+
+            </rect>
+          </g>
+
+
+        </g>
+      </g>
+      <g class="text" fill-rule="nonzero" transform="scale(0.9) translate(55, 11)">
+        <path d="M20 1.016V21h-3.405V8.54L11.575 21H8.3L3.31 8.68V21H0V1.016h3.278L9.88 17.028 16.533 1M32.658 20.673c-.115-.503-.192-1.013-.228-1.527-.412.57-.974 1.034-1.63 1.344-.833.358-1.743.53-2.658.504-1.353.062-2.682-.346-3.733-1.146-.957-.8-1.472-1.962-1.403-3.16-.07-1.162.434-2.29 1.37-3.055 1.08-.773 2.423-1.158 3.78-1.084h4.24v-.505c.068-.706-.22-1.402-.782-1.878-.63-.426-1.394-.637-2.17-.596-1.492-.08-2.893.683-3.553 1.94l-2.462-1.343c.55-1.03 1.435-1.87 2.527-2.398 1.14-.525 2.398-.787 3.67-.764 1.575-.062 3.125.39 4.384 1.282 1.243 1.066 1.882 2.614 1.73 4.185v5.268c-.058.975.03 1.95.26 2.903l-3.342.03zm-.294-5.88H28.86c-.66-.04-1.31.14-1.843.505-.435.344-.676.857-.652 1.39-.038.547.21 1.077.668 1.42.562.354 1.232.526 1.908.488.89.02 1.754-.28 2.414-.84.733-.712 1.102-1.686 1.01-2.672v-.29zM46.327 7.002c.564-.008 1.127.056 1.673.19v3.055c-.546-.134-1.11-.198-1.673-.19-1.078-.058-2.126.344-2.86 1.096-.724.852-1.087 1.93-1.02 3.023V21H39V7.208h3.23l.2 1.59c.31-.61.847-1.09 1.505-1.35.754-.313 1.57-.465 2.392-.446zM50 20.952V0h3.318v12.844l5.514-5.796H63l-6.01 6.294 5.69 7.61h-4.024l-3.863-5.314-1.46 1.605V21M77 15.228H66.198c.047.894.493 1.728 1.227 2.294 1.43.957 3.314 1.052 4.844.244.615-.364 1.1-.898 1.388-1.53l2.81 1.056c-.497 1.142-1.37 2.103-2.488 2.738-2.057 1.1-4.526 1.274-6.733.474-.865-.31-1.648-.795-2.293-1.423-.632-.632-1.12-1.38-1.437-2.2-.35-.912-.526-1.875-.517-2.845-.01-.975.166-1.943.517-2.86.315-.828.804-1.588 1.437-2.232.625-.625 1.385-1.116 2.23-1.438.912-.346 1.89-.518 2.873-.504.963-.012 1.918.16 2.81.505.825.32 1.57.806 2.18 1.423.613.638 1.085 1.387 1.388 2.202.37.933.562 1.923.565 2.92v1.178zm-3.488-2.263c-.002-.914-.38-1.79-1.05-2.447-.688-.574-1.586-.87-2.502-.826-.928-.037-1.835.264-2.535.84-.7.65-1.12 1.522-1.18 2.448l7.267-.015zM89.7 20.675l-.112-.903-.112-.934c-.467.7-1.13 1.252-1.904 1.584-.863.388-1.8.582-2.746.57-.937.043-1.874-.092-2.762-.396-.806-.314-1.536-.794-2.143-1.41-.625-.646-1.107-1.42-1.41-2.265-.352-.986-.524-2.026-.51-3.073-.008-1.006.17-2.005.525-2.947.323-.854.814-1.635 1.444-2.297.616-.645 1.362-1.152 2.19-1.49.88-.357 1.825-.534 2.777-.522.882-.003 1.757.17 2.57.508.774.305 1.448.815 1.954 1.473V0h3.286v17.222c0 .485.027 1.135.08 1.948.024.505.082 1.008.174 1.505h-3.3zm-.398-6.923c.07-1.16-.325-2.3-1.095-3.17-.755-.748-1.795-1.14-2.857-1.076-1.087-.043-2.14.385-2.89 1.172-.773.87-1.167 2.01-1.094 3.17-.073 1.16.32 2.3 1.095 3.168.75.787 1.803 1.215 2.89 1.172 1.082.044 2.13-.384 2.873-1.172.79-.897 1.18-2.075 1.08-3.264z"
+        />
+      </g>
+    </svg>
+
+
+    <!-- <svg class="svg13" viewBox="0 0 140 42" xmlns="http://www.w3.org/2000/svg">
+      <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+        <g>
+          <g class="bubble bounce" fill="#C1C6CE" fill-rule="nonzero">
+            <path d="M22.5242094,0.496262155 L21.6304189,0.321342187 C16.9228278,-0.577267676 12.0498065,0.426421183 8.08572632,3.11112212 C4.12164615,5.79582306 1.39201941,9.9410806 0.498656042,14.6329759 L0.323090036,15.5234776 C-0.579202005,20.2114453 0.426038094,25.0644917 3.11737011,29.0135589 C5.80870212,32.9626262 9.96533491,35.6837413 14.6716208,36.577481 C15.2583016,36.6913913 15.7589799,37.0695383 16.0275355,37.6015619 C16.2960911,38.1335855 16.3022549,38.7595205 16.0442278,39.2966914 L15.262161,40.8868729 C15.1475588,41.1275761 15.1643322,41.4099313 15.3066325,41.6354852 C15.4489329,41.8610391 15.6970335,41.9985237 15.9644251,42 C20.0662854,42 33.5210256,35.5120594 36.3300817,24.3171814 C36.3460422,24.3330832 41.5811013,4.28089419 22.5242094,0.496262155 Z"></path>
+          </g>
+          <g fill="#38414C">
+            <rect x="6.6" y="12" width="3.72" height="0" rx="2" ry="2">
+              <animate id="a1" attributeName="height" from="0" to="6" dur="0.15s" fill="freeze" begin="1s" />
+              <animate attributeName="y" from="19" to="16" dur="0.15s" fill="freeze" begin="1s" />
+
+              <animate id="a6" attributeName="x" from="6.6" to="1.6" dur="0.15s" fill="freeze" begin="a5.end" />
+              <animate attributeName="opacity" from="1" to="0" dur="0.15s" fill="freeze" begin="a5.end" />
+
+            </rect>
+          </g>
+          <g fill="#38414C">
+            <rect x="11.6" y="12" width="3.72" height="0" rx="2" ry="2">
+              <animate id="a2" attributeName="height" from="0" to="14" dur="0.15s" fill="freeze" begin="a1.end" />
+              <animate attributeName="y" from="19" to="12" dur="0.15s" fill="freeze" begin="a1.end" />
+
+              <animate id="a7" attributeName="x" from="11.6" to="6.6" dur="0.15s" fill="freeze" begin="a6.end" />
+
+              <animate id="a13" attributeName="x" from="6.6" to="1.6" dur="0.15s" fill="freeze" begin="a12.end" />
+              <animate attributeName="opacity" from="1" to="0" dur="0.15s" fill="freeze" begin="a12.end" />
+
+            </rect>
+          </g>
+          <g fill="#38414C">
+            <rect x="16.6" y="12" width="3.72" height="0" rx="2" ry="2">
+              <animate id="a3" attributeName="height" from="0" to="10" dur="0.15s" fill="freeze" begin="a2.end" />
+              <animate attributeName="y" from="17" to="14" dur="0.15s" fill="freeze" begin="a2.end" />
+
+              <animate id="a8" attributeName="x" from="16.6" to="11.6" dur="0.15s" fill="freeze" begin="a6.end" />
+
+              <animate id="a14" attributeName="x" from="11.6" to="6.6" dur="0.15s" fill="freeze" begin="a12.end" />
+
+            </rect>
+          </g>
+          <g fill="#38414C">
+            <rect x="21.6" y="12" width="3.72" height="0" rx="2" ry="2">
+              <animate id="a4" attributeName="height" from="0" to="14" dur="0.15s" fill="freeze" begin="a3.end" />
+              <animate attributeName="y" from="19" to="12" dur="0.15s" fill="freeze" begin="a3.end" />
+
+              <animate id="a9" attributeName="x" from="21.6" to="16.6" dur="0.15s" fill="freeze" begin="a6.end" />
+
+              <animate id="a15" attributeName="x" from="16.6" to="11.6" dur="0.15s" fill="freeze" begin="a12.end" />
+
+            </rect>
+          </g>
+          <g fill="#38414C">
+            <rect x="26.6" y="12" width="3.72" height="0" rx="2" ry="2">
+              <animate id="a5" attributeName="height" from="0" to="6" dur="0.15s" fill="freeze" begin="a4.end" />
+              <animate attributeName="y" from="19" to="16" dur="0.15s" fill="freeze" begin="a4.end" />
+
+              <animate id="a10" attributeName="x" from="26.6" to="21.6" dur="0.15s" fill="freeze" begin="a6.end" />
+
+              <animate id="a16" attributeName="x" from="21.6" to="16.6" dur="0.15s" fill="freeze" begin="a12.end" />
+
+            </rect>
+          </g>
+
+          <g fill="#38414C">
+            <rect x="31.6" y="12" width="3.72" height="0" rx="2" ry="2">
+              <animate id="a11" attributeName="height" from="0" to="14" dur="0.15s" fill="freeze" begin="a10.end" />
+              <animate attributeName="y" from="19" to="12" dur="0.15s" fill="freeze" begin="a10.end" />
+
+              <animate id="a12" attributeName="x" from="31.6" to="26.6" dur="0.15s" fill="freeze" begin="a6.end" />
+
+              <animate id="a17" attributeName="x" from="26.6" to="21.6" dur="0.15s" fill="freeze" begin="a12.end" />
+            </rect>
+          </g>
+
+          <g fill="#38414C">
+            <rect x="31.6" y="12" width="3.72" height="0" rx="2" ry="2">
+              <animate id="a18" attributeName="height" from="0" to="10" dur="0.15s" fill="freeze" begin="a17.end" />
+              <animate attributeName="y" from="17" to="14" dur="0.15s" fill="freeze" begin="a17.end" />
+
+              <animate id="a19" attributeName="x" from="31.6" to="26.6" dur="0.15s" fill="freeze" begin="a18.end" />
+
+            </rect>
+          </g>
+
+
+        </g>
+      </g>
+      <g class="text" fill-rule="nonzero" transform="scale(0.9) translate(55, 11)">
+        <path d="M20 1.016V21h-3.405V8.54L11.575 21H8.3L3.31 8.68V21H0V1.016h3.278L9.88 17.028 16.533 1M32.658 20.673c-.115-.503-.192-1.013-.228-1.527-.412.57-.974 1.034-1.63 1.344-.833.358-1.743.53-2.658.504-1.353.062-2.682-.346-3.733-1.146-.957-.8-1.472-1.962-1.403-3.16-.07-1.162.434-2.29 1.37-3.055 1.08-.773 2.423-1.158 3.78-1.084h4.24v-.505c.068-.706-.22-1.402-.782-1.878-.63-.426-1.394-.637-2.17-.596-1.492-.08-2.893.683-3.553 1.94l-2.462-1.343c.55-1.03 1.435-1.87 2.527-2.398 1.14-.525 2.398-.787 3.67-.764 1.575-.062 3.125.39 4.384 1.282 1.243 1.066 1.882 2.614 1.73 4.185v5.268c-.058.975.03 1.95.26 2.903l-3.342.03zm-.294-5.88H28.86c-.66-.04-1.31.14-1.843.505-.435.344-.676.857-.652 1.39-.038.547.21 1.077.668 1.42.562.354 1.232.526 1.908.488.89.02 1.754-.28 2.414-.84.733-.712 1.102-1.686 1.01-2.672v-.29zM46.327 7.002c.564-.008 1.127.056 1.673.19v3.055c-.546-.134-1.11-.198-1.673-.19-1.078-.058-2.126.344-2.86 1.096-.724.852-1.087 1.93-1.02 3.023V21H39V7.208h3.23l.2 1.59c.31-.61.847-1.09 1.505-1.35.754-.313 1.57-.465 2.392-.446zM50 20.952V0h3.318v12.844l5.514-5.796H63l-6.01 6.294 5.69 7.61h-4.024l-3.863-5.314-1.46 1.605V21M77 15.228H66.198c.047.894.493 1.728 1.227 2.294 1.43.957 3.314 1.052 4.844.244.615-.364 1.1-.898 1.388-1.53l2.81 1.056c-.497 1.142-1.37 2.103-2.488 2.738-2.057 1.1-4.526 1.274-6.733.474-.865-.31-1.648-.795-2.293-1.423-.632-.632-1.12-1.38-1.437-2.2-.35-.912-.526-1.875-.517-2.845-.01-.975.166-1.943.517-2.86.315-.828.804-1.588 1.437-2.232.625-.625 1.385-1.116 2.23-1.438.912-.346 1.89-.518 2.873-.504.963-.012 1.918.16 2.81.505.825.32 1.57.806 2.18 1.423.613.638 1.085 1.387 1.388 2.202.37.933.562 1.923.565 2.92v1.178zm-3.488-2.263c-.002-.914-.38-1.79-1.05-2.447-.688-.574-1.586-.87-2.502-.826-.928-.037-1.835.264-2.535.84-.7.65-1.12 1.522-1.18 2.448l7.267-.015zM89.7 20.675l-.112-.903-.112-.934c-.467.7-1.13 1.252-1.904 1.584-.863.388-1.8.582-2.746.57-.937.043-1.874-.092-2.762-.396-.806-.314-1.536-.794-2.143-1.41-.625-.646-1.107-1.42-1.41-2.265-.352-.986-.524-2.026-.51-3.073-.008-1.006.17-2.005.525-2.947.323-.854.814-1.635 1.444-2.297.616-.645 1.362-1.152 2.19-1.49.88-.357 1.825-.534 2.777-.522.882-.003 1.757.17 2.57.508.774.305 1.448.815 1.954 1.473V0h3.286v17.222c0 .485.027 1.135.08 1.948.024.505.082 1.008.174 1.505h-3.3zm-.398-6.923c.07-1.16-.325-2.3-1.095-3.17-.755-.748-1.795-1.14-2.857-1.076-1.087-.043-2.14.385-2.89 1.172-.773.87-1.167 2.01-1.094 3.17-.073 1.16.32 2.3 1.095 3.168.75.787 1.803 1.215 2.89 1.172 1.082.044 2.13-.384 2.873-1.172.79-.897 1.18-2.075 1.08-3.264z"
+        />
+      </g>
+    </svg> -->
+
   </div>
 </body>
 <script>
   function get() {
     var number = window.location.hash
       ? parseInt(window.location.hash.replace('#', ''))
-      : Math.floor((Math.random() * 11) + 1);
+      : Math.floor((Math.random() * 12) + 1);
     var svg = document.querySelector('.svg' + number);
     var cloned = svg.cloneNode(true);
     document.querySelector('.display').innerHTML = '';
