--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Marked. Coming soon. @markedio</title>
   </head>
   <body>
-    Soon. <a href="https://twitter.com/markedio">Following for updates</a>.
+    Soon. <a href="https://twitter.com/markedio">Follow @markedio for updates</a>.
   </body>
 </html>
