--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
+    <meta name="google-site-verification" content="6S7sylViW8sZIRbaCFCnLvDUirPTtKaDgAqSOVa8D8w" />
     <title>Marked. Coming soon. @markedio</title>
   </head>
   <body>
-    Soon. <a href="https://twitter.com/markedio">Follow @markedio for updates</a>.
+    <div>We're building a little thing to make the most out of your conversations.</div>
+    <div>Follow <a href="https://twitter.com/markedio">@markedio</a> for updates.</div>
   </body>
 </html>
