--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <meta name="google-site-verification" content="6S7sylViW8sZIRbaCFCnLvDUirPTtKaDgAqSOVa8D8w" />
+    <link href="https://fonts.googleapis.com/css?family=Fira+Sans" rel="stylesheet">
     <title>Marked. Coming soon. @markedio</title>
+    <style>
+      html, body {
+        font-family: 'Fira Sans', sans-serif;
+        font-size: 20px;
+        line-height: 1.5;
+        color: rgba(0,0,0,0.6);
+      }
+    </style>
   </head>
   <body>
     <div>We're building a little thing to make the most out of your conversations.</div>
