--- a/index.html
+++ b/index.html
@@ -12,11 +12,21 @@
         font-size: 20px;
         line-height: 1.5;
         color: rgba(0,0,0,0.6);
+        height: 100%;
+      }
+      .content {
+        display: flex;
+        height: 100%:
+        padding: 2em;
+        align-items: center;
+        justify-content: center;
       }
     </style>
   </head>
   <body>
-    <div>We're building a little thing to make the most out of your conversations.</div>
-    <div>Follow <a href="https://twitter.com/markedio">@markedio</a> for updates.</div>
+    <div class="content">
+      <div>We're building a little thing to make the most out of your conversations.</div>
+      <div>Follow <a href="https://twitter.com/markedio">@markedio</a> for updates.</div>
+    </div>
   </body>
 </html>
