--- a/index.html
+++ b/index.html
@@ -9,17 +9,18 @@
     <style>
       html, body {
         font-family: 'Fira Sans', sans-serif;
-        font-size: 20px;
-        line-height: 1.5;
+        font-size: 30px;
+        line-height: 1.7;
         color: rgba(0,0,0,0.6);
         height: 100%;
       }
       .content {
         display: flex;
-        height: 100%:
+        height: 100%;
         padding: 2em;
         align-items: center;
         justify-content: center;
+        flex-direction: column;
       }
     </style>
   </head>
