--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         line-height: 1.7;
         color: rgba(0,0,0,0.6);
         height: 100%;
+        box-sizing: border-box;
       }
       .content {
         display: flex;
