--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
       html, body {
         font-family: 'Fira Sans', sans-serif;
-        font-size: 30px;
+        font-size: 2.5vw;
         line-height: 1.7;
         color: rgba(0,0,0,0.6);
         height: 100%;
@@ -22,6 +22,9 @@
         justify-content: center;
         flex-direction: column;
         text-align: center;
+      }
+      .content div {
+        padding: 0.5em;
       }
       svg {
         position: absolute;
